--- a/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/SearchPage.xaml
+++ b/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/SearchPage.xaml
@@ -2,22 +2,123 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:vm="clr-namespace:KenffySoft.Bloggy.ViewModels" 
-             xmlns:control="clr-namespace:KenffySoft.Bloggy.Controls"
+             xmlns:control="clr-namespace:KenffySoft.Bloggy.Controls" 
              x:Class="KenffySoft.Bloggy.Views.SearchPage">
 
     <ContentPage.BindingContext>
         <vm:SearchViewModel />
     </ContentPage.BindingContext>
 
+    <ContentPage.Resources>
+        <DataTemplate x:Key="PostSearchTemplate">
+            <Grid Padding="10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.15*" />
+                    <ColumnDefinition Width="0.85*" />
+                </Grid.ColumnDefinitions>
+                <Image Source="{Binding PostImage}" 
+                       Aspect="AspectFill"
+                       HeightRequest="40" 
+                       WidthRequest="40" />
+                <Label Grid.Column="1" 
+                       Text="{Binding Title}" 
+                       FontAttributes="Bold" 
+                       MaxLines="2"
+                       LineBreakMode="TailTruncation"/>
+            </Grid>
+        </DataTemplate>
+    </ContentPage.Resources>
+
     <Shell.SearchHandler>
-        <control:BloggySearchHandler Placeholder="Enter search term"
-                                      ShowsResults="true" />
+        <control:PostSearchHandler 
+            Placeholder="Enter search term"
+            ShowsResults="true"
+            ItemTemplate="{StaticResource PostSearchTemplate}"/>
     </Shell.SearchHandler>
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Search"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+
+    <!--<StackLayout>
+
+        <ScrollView>
+            <StackLayout>
+                <StackLayout x:Name="Posts"
+                    VerticalOptions="StartAndExpand"
+                    BindableLayout.ItemsSource="{Binding PostCollection}"
+                    Orientation="Vertical">
+                    <BindableLayout.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout Margin="0,5">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="100"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    --><!--Title--><!--
+                                    <StackLayout Grid.Column="0" Margin="10">
+                                        <Grid>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                            </Grid.RowDefinitions>
+
+                                            <StackLayout Grid.Row="0">
+                                                <Label Text="{Binding Title}" FontAttributes="Bold" 
+                                                       FontSize="18" MaxLines="2"
+                                                       LineBreakMode="TailTruncation"
+                                                       TextColor="{StaticResource TextPrimary}"/>
+                                                <Label Text="{Binding PostedAt}"/>
+                                            </StackLayout>
+
+                                            <StackLayout Grid.Row="1" Margin="0,5">
+                                                <Label Text="{Binding Details}"/>
+                                            </StackLayout>
+                                        </Grid>
+
+                                    </StackLayout>
+
+                                    --><!--Picture--><!--
+                                    <StackLayout Grid.Column="1" Margin="5">
+                                        <Frame CornerRadius="5" Padding="-1" VerticalOptions="CenterAndExpand">
+                                            <ff:CachedImage Source="{Binding PostImage}" Aspect="AspectFill" HeightRequest="100"/>
+                                        </Frame>
+                                    </StackLayout>
+                                </Grid>
+                            </StackLayout>
+                        </DataTemplate>
+                    </BindableLayout.ItemTemplate>
+                </StackLayout>
+
+                <StackLayout x:Name="Bloggies"
+                    BindableLayout.ItemsSource="{Binding BloggyCollection}"
+                    Orientation="Vertical">
+                    <BindableLayout.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout Spacing="16" Margin="0,10" Padding="0">
+                                --><!--Header--><!--
+                                <StackLayout Grid.Row="0" Orientation="Horizontal">
+
+                                    <views:AvatarView Text="{Binding Avatar}"  Source="{Binding ProfileImage}"  
+                                                                      Size="50" Color="{Binding AvatarColor}" TextColor="White" 
+                                                                      VerticalOptions="StartAndExpand" Margin="8"/>
+
+                                    <StackLayout Margin="2" VerticalOptions="Center">
+                                        <Label Text="{Binding Name}" FontSize="Medium" 
+                                           FontAttributes="Bold"
+                                           VerticalOptions="Center"/>
+
+                                        <Label Text="{Binding Description}" FontSize="Subtitle" 
+                                           TextColor="DarkGray" FontAttributes="Italic"
+                                               MaxLines="1"
+                                               LineBreakMode="TailTruncation"
+                                           VerticalOptions="Center"/>
+                                    </StackLayout>
+                                </StackLayout>
+                            </StackLayout>
+                        </DataTemplate>
+                    </BindableLayout.ItemTemplate>
+                </StackLayout>
+            </StackLayout>
+        </ScrollView>
+        
+    </StackLayout>-->
 </ContentPage>
