--- a/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/PostPage.xaml
+++ b/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/PostPage.xaml
@@ -8,9 +8,9 @@
              x:Name="MyPost"
              Title="My Posts">
 
-    <ContentPage.BindingContext>
+    <!--<ContentPage.BindingContext>
         <vm:PostViewModel />
-    </ContentPage.BindingContext>
+    </ContentPage.BindingContext>-->
 
     <ContentPage.ToolbarItems>
         <ToolbarItem IconImageSource="add.png" Order="Primary" Command="{Binding AddCommand}"/>
