--- a/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/Users/FollowersPage.xaml
+++ b/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/Users/FollowersPage.xaml
@@ -6,9 +6,9 @@
              x:Class="KenffySoft.Bloggy.Views.Users.FollowersPage"
              Title="Followers">
 
-    <ContentPage.BindingContext>
+    <!--<ContentPage.BindingContext>
         <vm:FollowersViewModel />
-    </ContentPage.BindingContext>
+    </ContentPage.BindingContext>-->
     
     <ContentPage.Content>
         <StackLayout>
@@ -23,6 +23,9 @@
                             <StackLayout Spacing="16" Margin="0,10" Padding="0">
                                 <!--Header-->
                                 <StackLayout Grid.Row="0" Orientation="Horizontal">
+
+                                    <!--<views:AvatarView Text="{Binding Avatar}"  Source="{Binding ProfileImage}"
+                                                                      VerticalOptions="StartAndExpand" Margin="8"/>-->
 
                                     <views:AvatarView Text="{Binding Avatar}"  Source="{Binding ProfileImage}"  
                                                                       Size="50" Color="{Binding AvatarColor}" TextColor="White" 
