--- a/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/Users/FollowingPage.xaml
+++ b/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/Users/FollowingPage.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:vm="clr-namespace:KenffySoft.Bloggy.ViewModels" xmlns:views="http://xamarin.com/schemas/2020/toolkit"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:vm="clr-namespace:KenffySoft.Bloggy.ViewModels" 
+             xmlns:views="http://xamarin.com/schemas/2020/toolkit"
              x:Class="KenffySoft.Bloggy.Views.Users.FollowingPage"
              Title="Following">
 
-    <ContentPage.BindingContext>
+    <!--<ContentPage.BindingContext>
         <vm:FollowingViewModel />
-    </ContentPage.BindingContext>
+    </ContentPage.BindingContext>-->
     
     <ContentPage.Content>
         <StackLayout>
@@ -22,6 +24,9 @@
                                 <StackLayout Spacing="16" Margin="0,10" Padding="0">
                                     <!--Header-->
                                     <StackLayout Grid.Row="0" Orientation="Horizontal">
+
+                                        <!--<views:AvatarView Text="{Binding Avatar}"  Source="{Binding ProfileImage}"
+                                                                      VerticalOptions="StartAndExpand" Margin="8"/>-->
 
                                         <views:AvatarView Text="{Binding Avatar}"  Source="{Binding ProfileImage}"  
                                                                       Size="50" Color="{Binding AvatarColor}" TextColor="White" 
